# linkml-tutorial-2024

./: .cruft.json  .env.public  .gitignore  .linkmllint.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
AirSample/: index.html
BiomeTypeEnum/: index.html
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
Sample/: index.html
SampleCollection/: index.html
SoilSample/: index.html
Sparqlpath/: index.html
SpeciesEnum/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
altitude/: index.html
birth_date/: index.html
depth/: index.html
description/: index.html
entries/: index.html
examples/: README.md  Sample-001.yaml  Sample-002.yaml
id/: index.html
latitude/: index.html
linkml-tutorial-2024/: index.html
longitude/: index.html
name/: index.html
primary_email/: index.html
sample_biome/: index.html
sample_type/: index.html
samples/: index.html
search/: search_index.json
species/: index.html
tests/: __init__.py  test_data.py
vital_status/: index.html
(+23 files in other folders)
